# -agent-os

./: .gitignore  AGENTS.md  CODEOWNERS  Makefile  Procfile  README.md  decision.json  execution.json  feedback.json  out.json  pr_gate_result.json  pyproject.toml  pytest.ini  summary
.brv/: config.json
audit/: __init__.py  operational_report.py
backups/: subagent-registry-CkqrXKq4.js.20260308_205801.bak  subagent-registry-CkqrXKq4.js.20260308_210730.bak
bridge/: route_to_task.py  route_to_task.py.bak.step60_finalize.20260310_155919  route_to_task.py.bak.step60_recursion_fix.20260310_160049  route_to_task.py.bak.step79_router_policy.20260310_174733  route_to_task.py.bak.step79_router_policy_repair.20260310_175140  route_to_task.py.bak.step80_critique.20260310_180611  route_to_task.py.bak.step81_experiment.20260310_181151  route_to_task.py.bak.step82_execution.20260310_181338  route_to_task.py.bak.step83_retrospective_fix.20260310_181750  route_to_task.py.bak.step84_router_chain.20260310_181941  route_to_task.py.bak.step85_multi_skill_pipeline.20260310_182156  route_to_task.py.bak.step86_autonomous_planning.20260310_182356  route_to_task.py.bak.step86_route_helper_fix.20260310_183123  route_to_task.py.bak.step86_route_reason_literals_fix.20260310_190936  route_to_task.py.bak.step86_router_cli_compact_fix.20260310_183654  route_to_task.py.bak.step86_router_cli_fix.20260310_183532  route_to_task.py.bak.step86_router_helper_rebuild.20260310_183158  route_to_task.py.bak.step86_router_rebuild.20260310_183455  route_to_task.py.bak.step87_2c_import_only.20260310_195555  (+21 more)
(+1797 files in other folders)
